gl51-master/src/test/deca/context/invalid/test_rule0_2.deca
//Description
// identificateur de type non déclaré

{
    double a; //Double n'existe pas en Deca
    //PASSED
}